about alignment fixed

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -6,25 +6,33 @@
 
 @media only screen and (max-width: 768px) {
 	.about-card {
-		width: 250px;
+		width: 200px;
 		height: 300px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 @media only screen and (min-width: 768px) {
 	.about-card {
 		width: 300px;
 		height: 300px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 @media only screen and (min-width: 992px) {
 	.about-card {
 		width: 350px;
 		height: 300px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 @media only screen and (min-width: 1200px) {
 	.about-card {
 		width: 450px;
 		height: 300px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
